update dsvs rest api

--- a/restApi/config.ini
+++ b/restApi/config.ini
@@ -1,4 +1,8 @@
 
 [self]
-dsvs_lib_file=/home/hj/workspace/go/rest-api/lib/libsvscc.so
 port=10086
+
+[dsvs]
+dsvs_lib_file=/home/hj/workspace/java/fabric-sdk-java-dsvs/restApi/lib/libsvscc.so
+dsvs_config_path=/home/hj/workspace/java/fabric-sdk-java-dsvs/restApi/config
+
